revamped the structure of an server
