# internal/model/jar_file.go
@@ -2,7 +2,8 @@ package model
 
 type JarFile struct {
 	SwaggerGormModel
-	Name    string `gorm:"not null"`
-	Version string `gorm:"not null"`
-	Path    string `gorm:"not null"`
+	Name     string `gorm:"not null" json:"name"`
+	Version  string `gorm:"not null" json:"version"`
+	Path     string `gorm:"not null" json:"path"`
+	IsCommon bool   `gorm:"not null;default:false" json:"is_common"`
 }
